--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>Главная</title>
 </head>
 <body>
-    Я ЕБЛАН
+    <div class="logo__container">
+        <h1>
+            <a href="index.html" rel="home"><img class="logo__img" src="dop/media/logo.png" alt="proCurs"></a>
+            <a href="index.html" rel="home"><span>Pro</span> Curs</a>
+        </h1>
+    </div>
 </body>
 </html>
