--- a/index.html
+++ b/index.html
@@ -5,14 +5,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="dop/style/main.css">
+    <link rel="stylesheet" href="dop/style/main__child.css">
     <title>Главная</title>
 </head>
 <body>
-    <div class="logo__container">
-        <h1>
-            <a href="index.html" rel="home"><img class="logo__img" src="dop/media/logo.png" alt="proCurs"></a>
-            <a href="index.html" rel="home"><span>Pro</span> Curs</a>
-        </h1>
+    <div class="wrapper">
+        <header class="header__main">
+            <div class="header__main__container">
+                <nav class="header__nav">
+                    <ul>
+                        <li><a href="index.html" class="activ">О центре</a></li>
+                        <li><a href="dop/page/catalog.html">Курсы</a></li>
+                        <li><a href="dop/page/personal.html"><img src="dop/media/user.png" alt="personal"></a></li>
+                        <li><a href="#"><img src="dop/media/search.png" alt="search"></a></li>
+                    </ul>
+                </nav>
+                <div class="logo__description">
+                    <h1>
+                        Pro <span class="curse">Curs</span>
+                        <br>
+                        <span class="description">
+                            Курсы профессиональной переподготовки в мире
+                        </span>
+                    </h1>
+                    <img src="dop/media/logo.png" alt="logo image">
+                </div>
+            </div>
+        </header>
+        <main class="main">
+            <div class="info__line">
+                <div>
+                    
+                </div>
+            </div>
+        </main>
+        <footer class="footer">
+            <div class="footer__container">
+                <div>
+                   <p class="tel">8 800 551-79-49</p>
+                   <p class="adres">г. Йошкар-Ола, ул. Вознесенская, 110</p>
+                </div>
+                <div>
+                   <nav class="social__link">
+                       <ul>
+                           <li><a href="https://mail.ru"><img src="dop/media/mail.png" alt="link Mail"></a></li>
+                           <li><a href="https://telegram.org"><img src="dop/media/telegram.png" alt="link Telegram"></a></li>
+                           <li><a href="https://vk.com"><img src="dop/media/vk.png" alt="link Vk"></a></li>
+                       </ul>
+                   </nav>
+                   <p class="copiright">Pro Curs © 2023</p>
+                </div>
+           </div>
+        </footer>
     </div>
 </body>
 </html>
