--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                 <nav class="header__nav">
                     <ul>
                         <li><a href="index.html" class="activ">О центре</a></li>
-                        <li><a href="dop/page/catalog.html">Курсы</a></li>
-                        <li><a href="dop/page/personal.html"><img src="dop/media/user.png" alt="personal"></a></li>
+                        <li><a href="page/catalog.html">Курсы</a></li>
+                        <li><a href="page/personal.html"><img src="dop/media/user.png" alt="personal"></a></li>
                         <li><a href="#"><img src="dop/media/search.png" alt="search"></a></li>
                     </ul>
                 </nav>
@@ -34,7 +34,56 @@
         </header>
         <main class="main">
             <div class="info__line">
+                <div class="info__line__block">
+                    <div><img src="dop/media/1.png" alt="border"><h2>43 субъекта</h2></div>
+                    <div><p>мы работаем с 43 субъектами Российской Федерации</p></div>
+                </div>
+                <div class="info__line__block">
+                    <div><img src="dop/media/teacher.png" alt="border"><h2>23 700 и более</h2></div>
+                    <div><p>педагогов прошли обучение на курсах повышения квалификации</p></div>
+                </div>
+            </div>
+            <div class="about__container">
                 <div>
+                    <h2>О нашей деятельности</h2>
+                    <p>Мы готовы предоставить возможность получить дополнительное профессиональное образование, а также повысить Вашу квалификацию в различных сферах, таких как: промышленность, строительные услуги, бухгалтерский учет, юриспруденция, в сфере педагогического образования, изучение иностранных языков, в сфере риэлторских услуг и мн.др</p>
+                    <p>Лицензия на осуществление образовательной деятельности № 359180 выдана 20.05.2005г. Департаментом образования Российской Федерации</p>
+                </div>
+                <div>
+                    <img src="dop/media/document.png" alt="">
+                </div>
+            </div>
+            <div class="application__container">
+                <div class="application__sub">
+                    <h2>Как проходит обучение</h2>
+                    <p>Всего 4 простых шага</p>
+                    <a href="#" class="app__link">Оставить заявку</a>
+                </div>
+                <div class="application__description">
+                    <ul>
+                        <li>
+                            <h3>Оставляете заявку</h3>
+                            <p>Вы оставляете заявку на сайте или по телефону</p>
+                        </li>
+                        <li>
+                            <h3>Проходите обучение</h3>
+                            <p>Проходите модули в удобное для Вас время, без отрыва от работы</p>
+                        </li>
+                        <li>
+                            <h3>Сдаете итоговый тест</h3>
+                            <p>После прохождения всего курса сдаете итоговую аттестацию</p>
+                        </li>
+                        <li>
+                            <h3>Получаете диплом</h3>
+                            <p>По окочанию получите диплом или удостоверение о профессиональной переподготовке</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="rev__container">
+                <p>Мы цуним каждый отзыв клиента!</p>
+                <h2>Отзывы о программах обучения</h2>
+                <div class="slider">
                     
                 </div>
             </div>
