--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                         <li><a href="index.html" class="activ">О центре</a></li>
                         <li><a href="page/catalog.html">Курсы</a></li>
                         <li><a href="page/personal.html"><img src="dop/media/user.png" alt="personal"></a></li>
-                        <li><a href="#"><img src="dop/media/search.png" alt="search"></a></li>
+                        <li><a href="page/FAQ.html"><img src="dop/media/search.png" alt="search"></a></li>
                     </ul>
                 </nav>
                 <div class="logo__description">
@@ -39,7 +39,7 @@
                     <div><p>мы работаем с 43 субъектами Российской Федерации</p></div>
                 </div>
                 <div class="info__line__block">
-                    <div><img src="dop/media/teacher.png" alt="border"><h2>23 700 и более</h2></div>
+                    <div><img src="dop/media/teacher.png" alt="border"><h2>23 700 ></h2></div>
                     <div><p>педагогов прошли обучение на курсах повышения квалификации</p></div>
                 </div>
             </div>
@@ -50,7 +50,7 @@
                     <p>Лицензия на осуществление образовательной деятельности № 359180 выдана 20.05.2005г. Департаментом образования Российской Федерации</p>
                 </div>
                 <div>
-                    <img src="dop/media/document.png" alt="">
+                    <img src="dop/media/document.png" alt="document">
                 </div>
             </div>
             <div class="application__container">
@@ -62,20 +62,28 @@
                 <div class="application__description">
                     <ul>
                         <li>
-                            <h3>Оставляете заявку</h3>
-                            <p>Вы оставляете заявку на сайте или по телефону</p>
+                            <div>
+                                <h3>Оставляете заявку</h3>
+                                <p>Вы оставляете заявку на сайте или по телефону</p>
+                            </div>
                         </li>
                         <li>
-                            <h3>Проходите обучение</h3>
-                            <p>Проходите модули в удобное для Вас время, без отрыва от работы</p>
+                            <div>
+                                <h3>Проходите обучение</h3>
+                                <p>Проходите модули в удобное для Вас время, без отрыва от работы</p>
+                            </div>
                         </li>
                         <li>
-                            <h3>Сдаете итоговый тест</h3>
-                            <p>После прохождения всего курса сдаете итоговую аттестацию</p>
+                            <div>
+                                <h3>Сдаете итоговый тест</h3>
+                                <p>После прохождения всего курса сдаете итоговую аттестацию</p>
+                            </div>
                         </li>
                         <li>
-                            <h3>Получаете диплом</h3>
-                            <p>По окочанию получите диплом или удостоверение о профессиональной переподготовке</p>
+                            <div>
+                                <h3>Получаете диплом</h3>
+                                <p>По окочанию получите диплом или удостоверение о профессиональной переподготовке</p>
+                            </div>
                         </li>
                     </ul>
                 </div>
@@ -84,7 +92,8 @@
                 <p>Мы цуним каждый отзыв клиента!</p>
                 <h2>Отзывы о программах обучения</h2>
                 <div class="slider">
-                    
+                   
+
                 </div>
             </div>
         </main>
